--- a/packages/react-firebase/package.json
+++ b/packages/react-firebase/package.json
@@ -18,16 +18,19 @@
     }
   ],
   "keywords": [
-    "zod",
-    "schema",
+    "react",
     "firestore",
     "firebase"
   ],
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {},
   "devDependencies": {
     "firebase": "11.1.0",
     "jest-mock-extended": "3.0.7",
+    "lerna": "8.1.9",
     "nanoid": "3.3.8",
     "react": "19.0.0",
     "react-dom": "19.0.0",
