--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -49,16 +49,16 @@ branches:
       required_status_checks:
         strict: true
         contexts:
-          - eslint & prettier
-          - type check
+          - 'eslint & prettier'
+          - 'type check'
           - tests
-          - markdown lint
+          - 'markdown lint'
           - commitlint
       enforce_admins: true
       required_linear_history: true
       required_signatures: true
       required_conversation_resolution: true
       restrictions:
-        apps: []
-        users: []
-        teams: []
+        apps: [ ]
+        users: [ ]
+        teams: [ ]
