--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -12,6 +12,10 @@
     },
     {
       groupName: 'Node.js',
+      matchPackageNames: ['pnpm'],
+    },
+    {
+      groupName: 'Node.js',
       matchPackageNames: ['node'],
       allowedVersions: '<23.0.0',
     },
