--- a/packages/react-firebase/package.json
+++ b/packages/react-firebase/package.json
@@ -26,15 +26,15 @@
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {},
   "devDependencies": {
-    "firebase": "11.10.0",
-    "jest-mock-extended": "4.0.0",
-    "lerna": "8.2.3",
-    "nanoid": "5.1.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "typescript": "5.8.3"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "firebase": "^11.10.0",
+    "jest-environment-jsdom": "^30.0.5",
+    "jest-mock-extended": "^4.0.0",
+    "nanoid": "^5.1.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "peerDependencies": {
     "@firebase/firestore": "^4.7.0",
