--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@valian/firebase-utilities",
   "private": true,
-  "description": "firebase utilities",
+  "description": "Valian Firebase Utilities",
   "author": {
     "name": "Valian",
     "url": "https://valian.ca",
@@ -19,7 +19,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "eslint": "nx run-many --target eslint",
-    "prettier": "prettier --check .",
+    "lint:prettier": "prettier --check .",
     "lint:md": "markdownlint-cli2 \"**/*.md\" \"#node_modules\"",
     "prepare": "husky",
     "test": "nx run-many --target test",
@@ -52,5 +52,5 @@
   "engines": {
     "node": ">= 22"
   },
-  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
+  "packageManager": "pnpm@10.13.1"
 }
