--- a/packages/react-firestore/package.json
+++ b/packages/react-firestore/package.json
@@ -27,11 +27,11 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "firebase": "^12.0.0",
-    "jest-environment-jsdom": "^30.0.5",
-    "jest-mock-extended": "^4.0.0",
     "nanoid": "^5.1.5",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "vitest-mock-extended": "^3.1.0",
+    "jsdom": "^25.0.0"
   },
   "peerDependencies": {
     "@firebase/firestore": "^4.7.0",
@@ -63,7 +63,8 @@
   "scripts": {
     "build": "rm -rf ./lib && rollup -c",
     "prepack": "pnpm run build",
-    "test": "jest --coverage --passWithNoTests",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest",
     "eslint": "eslint .",
     "type-check": "tsc"
   }
