--- a/packages/rxjs-firebase/package.json
+++ b/packages/rxjs-firebase/package.json
@@ -23,11 +23,10 @@
     "firebase"
   ],
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
     "firebase": "^12.0.0",
-    "jest-mock-extended": "^4.0.0",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "vitest-mock-extended": "^3.1.0"
   },
   "peerDependencies": {
     "@firebase/firestore": "^4.7.0",
@@ -58,7 +57,8 @@
   "scripts": {
     "build": "rm -rf ./lib && rollup -c",
     "prepack": "pnpm run build",
-    "test": "jest --coverage --passWithNoTests",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest",
     "eslint": "eslint .",
     "type-check": "tsc"
   }
