--- a/packages/react-firestore/.npmignore
+++ b/packages/react-firestore/.npmignore
@@ -4,8 +4,9 @@
 /tsconfig.json
 /tsconfig.*.json
 tsconfig.tsbuildinfo
-jest.*.cjs
+vitest.*
 rollup.config.js
 eslint.config.mjs
 .gitignore
 firebase.json
+GEMINI.md
