--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
-  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "1.5.0",
+  "$schema": "node_modules/@lerna-lite/cli/schemas/lerna-schema.json",
+  "version": "1.0.1",
   "license": "MIT",
   "npmClient": "pnpm"
 }
