--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@lerna-lite/cli": "^4.7.0",
+    "@lerna-lite/publish": "^4.7.0",
+    "@lerna-lite/version": "^4.7.0",
     "@nx/js": "21.3.11",
     "@rollup/plugin-typescript": "12.1.4",
     "@tsconfig/vite-react": "7.0.0",
@@ -38,7 +41,6 @@
     "@vitest/eslint-plugin": "^1.3.4",
     "eslint": "^9.31.0",
     "husky": "9.1.7",
-    "lerna": "8.2.3",
     "markdownlint-cli2": "0.18.1",
     "nx": "21.3.11",
     "prettier": "^3.6.2",
