--- a/packages/zustand-firestore/package.json
+++ b/packages/zustand-firestore/package.json
@@ -26,19 +26,21 @@
   "license": "MIT",
   "dependencies": {
     "@valian/rxjs-firebase": "workspace:*",
-    "observable-hooks": "^4.2.4",
-    "rxjs": "^7.8.2",
-    "zustand": "^5.0.7"
+    "observable-hooks": "^4.2.4"
   },
   "devDependencies": {
     "firebase": "^12.0.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "rxjs": "^7.8.2",
+    "zustand": "^5.0.7"
   },
   "peerDependencies": {
     "@firebase/firestore": "^4.7.0",
     "react": "^18 || ^19",
-    "react-dom": "^18 || ^19"
+    "react-dom": "^18 || ^19",
+    "rxjs": "^7.8.0",
+    "zustand": "^5"
   },
   "type": "module",
   "publishConfig": {
