--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vitest/eslint-plugin": "^1.3.4",
     "eslint": "^9.31.0",
     "husky": "9.1.7",
+    "jsdom": "^25.0.0",
     "markdownlint-cli2": "0.18.1",
     "nx": "21.3.11",
     "prettier": "^3.6.2",
