--- a/packages/zustand-firestore/package.json
+++ b/packages/zustand-firestore/package.json
@@ -33,7 +33,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "rxjs": "^7.8.2",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.7",
+    "@testing-library/react": "^16.3.0",
+    "vitest-mock-extended": "^3.1.0"
   },
   "peerDependencies": {
     "@firebase/firestore": "^4.7.0",
@@ -67,6 +69,8 @@
   "scripts": {
     "build": "rm -rf ./lib && rollup -c",
     "prepack": "pnpm run build",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest",
     "eslint": "eslint .",
     "type-check": "tsc"
   }
