--- a/packages/react-kitchen-sink/package.json
+++ b/packages/react-kitchen-sink/package.json
@@ -50,11 +50,13 @@
     "react": "^18 || ^19",
     "react-dom": "^18 || ^19",
     "rxjs": "^7.8.0",
-    "zustand": "^5",
     "@sentry/core": "^9 || ^10",
     "@sentry/react": "^9 || ^10",
     "@tanstack/react-query": "^5.80.0",
     "zod-firebase": "^1.7.0"
+  },
+  "optionalDependencies": {
+    "zustand": "^5"
   },
   "exports": {
     ".": {
