feat: react-query integration

--- a/packages/react-kitchen-sink/package.json
+++ b/packages/react-kitchen-sink/package.json
@@ -32,27 +32,28 @@
     "@valian/react-firestore": "workspace:*",
     "@valian/rxjs-firebase": "workspace:*",
     "@valian/zustand-firestore": "workspace:*",
-    "observable-hooks": "^4.2.4"
+    "observable-hooks": "^4.2.4",
+    "type-fest": "^4.41.0"
   },
   "devDependencies": {
-    "firebase": "^12.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
     "@sentry/core": "^10.1.0",
     "@sentry/react": "^10.1.0",
     "@tanstack/react-query": "^5.84.2",
-    "zod-firebase": "^1.7.0",
+    "firebase": "^12.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "rxjs": "^7.8.2",
+    "zod-firebase": "^1.7.0",
     "zustand": "^5"
   },
   "peerDependencies": {
     "@firebase/firestore": "^4.7.0",
-    "react": "^18 || ^19",
-    "react-dom": "^18 || ^19",
-    "rxjs": "^7.8.0",
     "@sentry/core": "^9 || ^10",
     "@sentry/react": "^9 || ^10",
     "@tanstack/react-query": "^5.80.0",
+    "react": "^18 || ^19",
+    "react-dom": "^18 || ^19",
+    "rxjs": "^7.8.0",
     "zod-firebase": "^1.7.0"
   },
   "optionalDependencies": {
