--- a/nx.json
+++ b/nx.json
@@ -1,6 +1,23 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
-  "defaultBase": "main",
+  "release": {
+    "projects": ["packages/*"],
+    "changelog": {
+      "projectChangelogs": true,
+      "workspaceChangelog": {
+        "file": false,
+        "createRelease": "github"
+      }
+    }
+  },
+  "plugins": [
+    {
+      "plugin": "@nx/eslint/plugin",
+      "options": {
+        "targetName": "lint"
+      }
+    }
+  ],
   "tui": {
     "enabled": false
   }
