--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@lerna-lite/cli": "^4.7.0",
     "@lerna-lite/publish": "^4.7.0",
     "@lerna-lite/version": "^4.7.0",
+    "@nx/eslint": "21.3.11",
     "@nx/js": "21.3.11",
     "@rollup/plugin-typescript": "12.1.4",
     "@tsconfig/vite-react": "7.0.0",
