--- a/packages/zustand-firestore/package.json
+++ b/packages/zustand-firestore/package.json
@@ -26,19 +26,23 @@
   "license": "MIT",
   "dependencies": {
     "@valian/rxjs-firebase": "workspace:*",
-    "observable-hooks": "^4.2.4",
-    "rxjs": "^7.8.2",
-    "zustand": "^5.0.7"
+    "observable-hooks": "^4.2.4"
   },
   "devDependencies": {
     "firebase": "^12.0.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "rxjs": "^7.8.2",
+    "zustand": "^5.0.7",
+    "@testing-library/react": "^16.3.0",
+    "vitest-mock-extended": "^3.1.0"
   },
   "peerDependencies": {
     "@firebase/firestore": "^4.7.0",
     "react": "^18 || ^19",
-    "react-dom": "^18 || ^19"
+    "react-dom": "^18 || ^19",
+    "rxjs": "^7.8.0",
+    "zustand": "^5"
   },
   "type": "module",
   "publishConfig": {
@@ -66,6 +70,8 @@
     "build": "rm -rf ./lib && rollup -c",
     "prepack": "pnpm run build",
     "eslint": "eslint .",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest",
     "type-check": "tsc"
   }
 }
