--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@lerna-lite/cli": "^4.7.0",
     "@lerna-lite/publish": "^4.7.0",
     "@lerna-lite/version": "^4.7.0",
+    "@nx/eslint": "21.3.11",
     "@nx/js": "21.3.11",
     "@rollup/plugin-typescript": "12.1.4",
     "@tsconfig/vite-react": "7.0.0",
@@ -41,6 +42,7 @@
     "@vitest/eslint-plugin": "^1.3.4",
     "eslint": "^9.31.0",
     "husky": "9.1.7",
+    "jsdom": "^25.0.0",
     "markdownlint-cli2": "0.18.1",
     "nx": "21.3.11",
     "prettier": "^3.6.2",
