chore: build with tsdown

--- a/packages/zustand-firestore/package.json
+++ b/packages/zustand-firestore/package.json
@@ -67,7 +67,7 @@
     "node": ">= 22"
   },
   "scripts": {
-    "build": "rm -rf ./lib && rollup -c",
+    "build": "tsdown",
     "prepack": "pnpm run build",
     "eslint": "eslint .",
     "test": "vitest run --coverage",
