--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@lerna-lite/version": "^4.7.0",
     "@nx/eslint": "21.4.1",
     "@nx/js": "21.4.1",
-    "@rollup/plugin-typescript": "12.1.4",
     "@tsconfig/vite-react": "7.0.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
@@ -46,9 +45,8 @@
     "markdownlint-cli2": "0.18.1",
     "nx": "21.4.1",
     "prettier": "^3.6.2",
-    "rollup": "4.50.0",
-    "rollup-plugin-dts": "6.2.3",
     "ts-node": "^10.9.2",
+    "tsdown": "^0.14.2",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   },
