--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,6 +14,8 @@ jobs:
         run: pnpm eslint
       - name: prettier
         run: pnpm lint:prettier
+      - name: publint
+        run: pnpm lint:publint
 
   type-check:
     name: type check
