--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "preinstall": "npx only-allow pnpm",
     "eslint": "nx run-many --target eslint",
     "lint:prettier": "prettier --check .",
+    "lint:publint": "nx run-many --target lint:publint",
     "lint:md": "markdownlint-cli2 \"**/*.md\" \"#node_modules\"",
     "prepare": "husky",
     "test": "nx run-many --target test",
@@ -45,6 +46,7 @@
     "markdownlint-cli2": "0.18.1",
     "nx": "21.4.1",
     "prettier": "^3.6.2",
+    "publint": "^0.3.12",
     "ts-node": "^10.9.2",
     "tsdown": "^0.14.2",
     "typescript": "^5.8.3",
