--- a/packages/zustand-firestore/package.json
+++ b/packages/zustand-firestore/package.json
@@ -49,7 +49,10 @@
     "access": "public",
     "exports": {
       ".": {
-        "types": "./lib/index.d.mts",
+        "types": {
+          "import": "./lib/index.d.mts",
+          "require": "./lib/index.d.cts"
+        },
         "import": "./lib/index.mjs",
         "require": "./lib/index.cjs",
         "default": "./lib/index.mjs"
@@ -57,7 +60,7 @@
     },
     "main": "./lib/index.cjs",
     "module": "./lib/index.mjs",
-    "types": "./lib/index.d.ts"
+    "types": "./lib/index.d.mts"
   },
   "exports": "./src/index.ts",
   "main": "./src/index.ts",
@@ -70,6 +73,7 @@
     "build": "tsdown",
     "prepack": "pnpm run build",
     "eslint": "eslint .",
+    "lint:publint": "pnpm build && publint",
     "test": "vitest run --coverage",
     "test:watch": "vitest",
     "type-check": "tsc"
