chore: build with tsdown (#46)
* chore: build with tsdown

* chore: setup publint

* chore: fix import

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "preinstall": "npx only-allow pnpm",
     "eslint": "nx run-many --target eslint",
     "lint:prettier": "prettier --check .",
+    "lint:publint": "nx run-many --target lint:publint",
     "lint:md": "markdownlint-cli2 \"**/*.md\" \"#node_modules\"",
     "prepare": "husky",
     "test": "nx run-many --target test",
@@ -33,7 +34,6 @@
     "@lerna-lite/version": "^4.7.0",
     "@nx/eslint": "21.4.1",
     "@nx/js": "21.4.1",
-    "@rollup/plugin-typescript": "12.1.4",
     "@tsconfig/vite-react": "7.0.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
@@ -46,9 +46,9 @@
     "markdownlint-cli2": "0.18.1",
     "nx": "21.4.1",
     "prettier": "^3.6.2",
-    "rollup": "4.50.0",
-    "rollup-plugin-dts": "6.2.3",
+    "publint": "^0.3.12",
     "ts-node": "^10.9.2",
+    "tsdown": "^0.14.2",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   },
