--- a/packages/react-kitchen-sink/package.json
+++ b/packages/react-kitchen-sink/package.json
@@ -64,8 +64,11 @@
   },
   "exports": {
     ".": {
+      "types": {
+        "import": "./lib/index.d.mts",
+        "require": "./lib/index.d.cts"
+      },
       "import": "./lib/index.mjs",
-      "types": "./lib/index.d.mts",
       "require": "./lib/index.cjs",
       "default": "./lib/index.mjs"
     }
@@ -73,14 +76,15 @@
   "type": "module",
   "main": "./lib/index.cjs",
   "module": "./lib/index.mjs",
-  "types": "./lib/index.d.ts",
+  "types": "./lib/index.d.mts",
   "engines": {
     "node": ">= 22"
   },
   "scripts": {
-    "build": "rm -rf ./lib && rollup -c",
+    "build": "tsdown",
     "prepack": "pnpm run build",
     "eslint": "eslint .",
+    "lint:publint": "pnpm build && publint",
     "test": "vitest run --coverage",
     "test:watch": "vitest",
     "type-check": "tsc"
