feat: @valian/react-query-observable

--- a/packages/react-kitchen-sink/package.json
+++ b/packages/react-kitchen-sink/package.json
@@ -21,8 +21,9 @@
     "react",
     "firestore",
     "firebase",
-    "sentry",
-    "rxjs"
+    "react-query",
+    "rxjs",
+    "sentry"
   ],
   "license": "MIT",
   "publishConfig": {
