feat: firestore observable

--- a/nx.json
+++ b/nx.json
@@ -8,6 +8,9 @@
         "file": false,
         "createRelease": "github"
       }
+    },
+    "git": {
+      "tag": false
     }
   },
   "plugins": [
