--- a/packages/react-kitchen-sink/package.json
+++ b/packages/react-kitchen-sink/package.json
@@ -30,6 +30,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@valian/react-query-observable": "workspace:*",
     "@valian/react-firestore": "workspace:*",
     "@valian/rxjs-firebase": "workspace:*",
     "@valian/zustand-firestore": "workspace:*",
