chore: update deps

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
   "eslint.useFlatConfig": true,
   "prettier.enable": true,
   "prettier.documentSelectors": ["**/*.ts", "**/*.tsx", "**/*.js"],
-  "nxConsole.generateAiAgentRules": true
+  "nxConsole.generateAiAgentRules": true,
+  "editor.accessibilitySupport": "off"
 }
