--- a/package.json
+++ b/package.json
@@ -27,29 +27,29 @@
     "type-check": "nx run-many --target type-check"
   },
   "devDependencies": {
-    "@commitlint/cli": "^20.0.0",
-    "@commitlint/config-conventional": "^20.0.0",
-    "@lerna-lite/cli": "^4.7.0",
-    "@lerna-lite/publish": "^4.7.0",
-    "@lerna-lite/version": "^4.7.0",
+    "@commitlint/cli": "20.1.0",
+    "@commitlint/config-conventional": "20.0.0",
+    "@lerna-lite/cli": "4.9.1",
+    "@lerna-lite/publish": "4.9.1",
+    "@lerna-lite/version": "4.9.1",
     "@nx/eslint": "21.6.2",
     "@nx/js": "21.6.2",
     "@tsconfig/vite-react": "7.0.1",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "@valian/eslint-config": "1.6.1",
-    "@vitest/coverage-v8": "^4.0.0",
-    "eslint": "^9.31.0",
+    "@vitest/coverage-v8": "4.0.4",
+    "eslint": "9.38.0",
     "husky": "9.1.7",
-    "jsdom": "^27.0.0",
+    "jsdom": "27.0.1",
     "markdownlint-cli2": "0.18.1",
     "nx": "21.6.2",
-    "prettier": "^3.6.2",
-    "publint": "^0.3.12",
-    "ts-node": "^10.9.2",
-    "tsdown": "^0.15.0",
-    "typescript": "^5.8.3",
-    "vitest": "^4.0.0"
+    "prettier": "3.6.2",
+    "publint": "0.3.15",
+    "ts-node": "10.9.2",
+    "tsdown": "0.15.10",
+    "typescript": "5.9.3",
+    "vitest": "4.0.4"
   },
   "engines": {
     "node": ">= 22"
