--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "publint": "0.3.15",
     "tsdown": "0.16.8",
     "typescript": "5.9.3",
-    "vitest": "4.0.14"
+    "vitest": "4.0.14",
+    "vitest-mock-extended": "3.1.0"
   },
   "engines": {
     "node": ">= 22"
