--- a/packages/react-firestore/package.json
+++ b/packages/react-firestore/package.json
@@ -27,8 +27,7 @@
     "@testing-library/react": "^16.3.0",
     "firebase": "^12.0.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "vitest-mock-extended": "^3.1.0"
+    "react-dom": "^19.1.0"
   },
   "peerDependencies": {
     "@firebase/firestore": "^4.7.0",
