--- a/packages/react-query-observable/package.json
+++ b/packages/react-query-observable/package.json
@@ -27,8 +27,7 @@
     "@tanstack/react-query": "^5.84.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "rxjs": "^7.8.2",
-    "vitest-mock-extended": "^3.1.0"
+    "rxjs": "^7.8.2"
   },
   "peerDependencies": {
     "@tanstack/react-query": "^5.80.0",
