--- a/packages/rxjs-firebase/package.json
+++ b/packages/rxjs-firebase/package.json
@@ -25,8 +25,7 @@
   "license": "MIT",
   "devDependencies": {
     "firebase": "^12.0.0",
-    "rxjs": "^7.8.2",
-    "vitest-mock-extended": "^3.1.0"
+    "rxjs": "^7.8.2"
   },
   "peerDependencies": {
     "@firebase/firestore": "^4.7.0",
