--- a/packages/zustand-firestore/package.json
+++ b/packages/zustand-firestore/package.json
@@ -29,13 +29,12 @@
     "observable-hooks": "^4.2.4"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.3.0",
     "firebase": "^12.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "rxjs": "^7.8.2",
-    "zustand": "^5.0.7",
-    "@testing-library/react": "^16.3.0",
-    "vitest-mock-extended": "^3.1.0"
+    "zustand": "^5.0.7"
   },
   "peerDependencies": {
     "@firebase/firestore": "^4.7.0",
