chore: pnpm update

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,9 +1,14 @@
 packages:
   - packages/*
 
+peerDependencyRules:
+  allowAny:
+    - storybook
+
 onlyBuiltDependencies:
   - '@firebase/util'
   - '@valian/eslint-config'
+  - esbuild
   - nx
   - protobufjs
   - unrs-resolver
